src/styles/modals.scss
@import 'variables';

.container__modal {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 10;
    display: flex;
    justify-content: center;
    align-items: center;
    background: rgba(0, 0, 0, 0.4);
    transform: translateX(-100%);
}
    
.modal__instructions {
    display: flex;
    flex-direction: column;
    height: auto;
    width: 50%;
    padding: 20px;
    border-radius: 6px;
    background: #fff;
    // border: 1px solid red;

    @media (max-height: 618px) {
        flex-direction: row;

        .instructions__copy {
            display: flex;
            flex-direction: column;
            justify-content: center;
            // border: 1px solid red;
            width: 50%;
            margin-left: 20px;
        }
    }

    @media (max-width: 940px) {
        width: 75%;
    }

    @media (max-width: 480px) {
        width: 90%;
    }

    .instructions__illustration {
        width: 40%;
        // border: 1px solid red;
        margin: 0 auto 10px;

        @media (max-height: 618px) {
            margin-bottom: 0;
        }

        .illustration__img {
            display: block;
            width: 100%;
            // border: 1px solid red;
        }

        @media (max-width: 1428px) {
            width: 50%;
        }

        @media (max-width: 1041px) {
            width: 60%;
        }

        @media (max-width: 819px) {
            width: 70%;
        }

        @media (max-width: 675px) {
            width: 90%;
        }

        @media (max-width: 480px) {
            width: 100%;
        }
    }

    .main-header {
        @include headingType(calc(2.4rem + 0.96vw));
        text-align: center;
        margin-bottom: 15px;
        // border: 1px solid red;
        text-align: center;
    }

    .main-paragraph {
        @include bodyType(calc(1.5rem + 0.18vw), 400);
        text-align: center;
        margin: 0 auto 40px;
        // border: 1px solid red;
        width: 55%;
        text-align: center;

        @media (max-height: 618px) {
            // height: 45%;
            width: 100%;
            margin-bottom: 0;
        }

        @media (max-width: 1238px) {
            width: 75%;
        }

        @media (max-width: 901px) {
            width: 90%;
        }
    }

    .main-button {
        margin: 0;
        width: 150px;
        align-self: flex-end;

        @media (max-width: 940px) {
            align-self: center;
        }
    }
}  

// inside share modal
.share_inputs {
    display: flex;
    width: 100%;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: stretch;
    align-content: center;

    @media(max-width: 1181px){
        width: 55%;
        justify-content: space-around;
        margin: 0 auto;
    }

    @media(max-width: 1007px){
        width: 80%;
    }

    .gallery_btn {
        @include mainButton($fontSizeValue: calc(.7rem + 0.59vw), $heightValue: calc(17px + 1.19vw), $widthValue: calc(100px + 2.5vw));
        margin-top: 16px             
    }

    .share_btn {
        @include secondaryButton($fontSizeValue: calc(.8rem + 0.59vw), $heightValue: calc(17px + 1.19vw), $widthValue: calc(100px + 2.5vw));
        margin-top: 16px;
    }
}

// .container__modal {
//     position: absolute;
//     top: 0;
//     left: 0;
//     bottom: 0;
//     right: 0;
//     z-index: 10;
    
//     display: flex;
//     justify-content: center;
    
//     background: rgba(0, 0, 0, 0.8);
//     transform: translateX(-100%);
        
//     &__modalInner {
//         display: flex;
//         flex-direction: column;
//         height: auto;
//         width: 50%;
//         padding: 10px 15px;
//         border-radius: 1em;
//         margin: auto 0;
//         background: #fff;

//         img {
//             margin: 0 auto;
//             width: 60%;
//         }
    
//         h2 {
//             margin: 0;
//             margin-top: 5px;
//         }
        
//         button {
//             align-self: flex-end;
//         }
//     }
// }

/* animations */
/* ----------------------------------------------
 * Generated by Animista on 2020-5-5 19:9:32
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */
.slideRight {animation: slideRight 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;}
.slideLeft {animation: slideLeft 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;}

@keyframes slideLeft {
    0% {transform: translateX(0);}
    100% {transform: translateX(-100%);}
}

@keyframes slideRight {
    0% {transform: translateX(-100%);}
    100% {transform: translateX(0);}
}

